added video and links

--- a/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
+++ b/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
@@ -22,27 +22,27 @@ Fast-forward a couple of months and, as discussed in our follow-up interview bel
 
 There are still major challenges to overcome, says Nauck - not least the fact that ChatGPT has no way to verify the accuracy or correctness of its outputs. But, if it *can* be linked to original sources, new types of search engines could follow.   
 
-Check out the full conversation below or on YouTube.  
+Check out the full conversation below or on [YouTube](https://www.youtube.com/watch?v=AWxfSmcgPbo).  
 
 Detlef Nauck is a member of the [Real World Data Science editoral board](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd) and head of AI and data science research for BT's Applied Research Division.
 
-<!-- Video link -->
+{{< video https://www.youtube.com/embed/AWxfSmcgPbo >}}
 
 ## Timestamps
-* How ChatGPT was built and trained (0:41)
-* ChatGPT's major advance (3:05)
-* The big problems with large language models (4:36)
-* Search engines and chatbots (9:35)
-* Questions for OpenAI and other model builders (11:29)
+* How ChatGPT was built and trained ([0:41](https://youtu.be/AWxfSmcgPbo?t=41))
+* ChatGPT's major advance ([3:05](https://youtu.be/AWxfSmcgPbo?t=185))
+* The big problems with large language models ([4:36](https://youtu.be/AWxfSmcgPbo?t=276))
+* Search engines and chatbots ([9:35](https://youtu.be/AWxfSmcgPbo?t=575))
+* Questions for OpenAI and other model builders ([11:29](https://youtu.be/AWxfSmcgPbo?t=689))
 
 ## Quotes
-"[OpenAI] have achieved quite remarkable capabilities in terms of sustaining conversations, and producing very realistic sounding responses... But sometimes [ChatGPT] makes silly mistakes. Sometimes the mistakes are not that obvious. It can hallucinate content... And it still doesn't know what it's talking about. It has no knowledge representation, doesn't have a word model. And it's just a statistical language model." (2:04)
+"[OpenAI] have achieved quite remarkable capabilities in terms of sustaining conversations, and producing very realistic sounding responses... But sometimes [ChatGPT] makes silly mistakes. Sometimes the mistakes are not that obvious. It can hallucinate content... And it still doesn't know what it's talking about. It has no knowledge representation, doesn't have a word model. And it's just a statistical language model." ([2:04](https://youtu.be/AWxfSmcgPbo?t=124))
 
-"These models, they produce an answer, which is based on the kind of texts that they have been trained on. And that can be quite effective. But it cannot yet link back to an original source. So what's still missing is the step where it says, 'Okay, this my answer to your question, and here's some evidence.' As soon as they have done this, then these kinds of systems will probably replace the search engines that we're used to." (4:07)
+"These models, they produce an answer, which is based on the kind of texts that they have been trained on. And that can be quite effective. But it cannot yet link back to an original source. So what's still missing is the step where it says, 'Okay, this my answer to your question, and here's some evidence.' As soon as they have done this, then these kinds of systems will probably replace the search engines that we're used to." ([4:07](https://youtu.be/AWxfSmcgPbo?t=247))
 
-"[These large language models are] still too big and too expensive to run... For [use in a] contact centre or similar, what you need is a much smaller model that is restricted in terms of what it can say. It should have knowledge representation, so it gives correct answers. And it doesn't need to speak 48 languages and be able to produce programming code. It only needs to be able to talk about a singular domain, where the information, the knowledge about the domain, has been carefully curated and prepared. And that's what we're not seeing yet. Can we build something like this, much smaller, much more restricted, and provably correct, so we can actually use the output?" (7:49)
+"[These large language models are] still too big and too expensive to run... For [use in a] contact centre or similar, what you need is a much smaller model that is restricted in terms of what it can say. It should have knowledge representation, so it gives correct answers. And it doesn't need to speak 48 languages and be able to produce programming code. It only needs to be able to talk about a singular domain, where the information, the knowledge about the domain, has been carefully curated and prepared. And that's what we're not seeing yet. Can we build something like this, much smaller, much more restricted, and provably correct, so we can actually use the output?" ([7:49](https://youtu.be/AWxfSmcgPbo?t=469))
 
-"We are seeing communities who don't necessarily have the technical background to judge the capabilities of these models, but see the opportunities for their own domain and might be acting too fast in adopting them. So the producer of these models has a certain responsibility to make sure that this doesn't happen." (12:26)
+"We are seeing communities who don't necessarily have the technical background to judge the capabilities of these models, but see the opportunities for their own domain and might be acting too fast in adopting them. So the producer of these models has a certain responsibility to make sure that this doesn't happen." ([12:26](https://youtu.be/AWxfSmcgPbo?t=746))
 
 ## Further reading
 * [ChatGPT: The Robot, the Myth, the Legend](https://philadelphiaphysicist.wordpress.com/2023/01/13/chatgpt-the-robot-the-myth-the-legend/) - Philadelphia Physicist blog, January 13, 2023
@@ -65,40 +65,40 @@ Yeah. So, what they have done is, OpenAI have used their large language model GP
 **Brian Tarran**  
 Yeah. But, do you think the big advance as you see it is the way it's able to remember or store some knowledge, if you like, of the conversation, because that was something that came out of our first conversation that we had, where you were saying that, you know, if you're looking at these as a potential chatbots for customer service lines, or whatever it might be, actually, the trees, the conversation trees break down after a while, and they don't, you know, these models get lost, but actually, they're able to maintain it a little longer, are they, or-- ?
 
-**Detlef Nauck** 
+**Detlef Nauck**  
 Yeah, I have not yet seen an example where they lost track of the conversation they seem to have, it seems to have quite a long memory, and doing quite well in this. So the main capability here is they have built a question answering system. And that's kind of the ultimate goal for search engines. So if you put something into Google, essentially, you have a question, show me something that answered this, answers this particular question. Of course, what you want this kind of an original source. And these models, they produce an answer, which is based on the kind of texts that they have been trained on. And that can be quite effective. But it cannot yet link back to an original source. So what's still missing is the step where it says, Okay, this my answer to your question, and here's some evidence. Then if, as soon as they have done this, then these kinds of systems will probably replace the search engines that we're used to.
 
 **Brian Tarran**  
 Yeah. The other thing that struck me with them was that the, if you're asking somebody a question - a human, you know, for instance - you expect a response that and you would hope you will be able to trust that response, especially if it's someone in an expert position or someone you're calling, you know, on behalf of a company or something. The fact that - and I asked this question of ChatGPT itself - and the response was, again, you should consult external sources to verify the information that's been provided by the chatbot. So it's like, I guess that leaves a question as to what the utility of it is, if you if you're always having to go elsewhere to verify that information.
 
-**Detlef Nauck**
+**Detlef Nauck**  
 Yeah, I mean, that's the main problem with these models, because they don't have a knowledge representation. They don't have a word model, they can't fall back on facts that are represented as being true and present those. They come up with an answer. But I mean, there's has been a lot of kind of pre-prompting going in to ChatGPT. So when you start writing something, the session has already already been prompted with a lot of text, telling the model how to behave, what not to say, to avoid certain topics. There are additional moderation APIs running that make sure that you can't create certain type of responses, which are based on classical text filtering, and topic filtering. So they try to kind of restrict what the model can do to make sure it's not offensive or inappropriate. But that is limited. So through crafting your requests, intelligently, you can convince it to ignore all of these things and go past it in some instances. So the, it's not yet perfect, and certainly it's not authoritative. So you can't trust the information if you're not an expert yourself. So at the moment, I'd say these kind of models are really useful for experts who can judge the correctness of the answer. And then what you get this kind of maybe a helpful kind of text representation of something that you would have to write yourself otherwise. 
 
 **Brian Tarran**  
 Yeah, and certainly conversations I've had with people, those who kind of work, maybe in creative industries, are finding them quite intriguing, in terms of things like, you know, maybe trying to come up with some clever tweets or something for a particular purpose, or something I want to try out is getting getting ChatGPT to write headlines for me, because it's always my least favourite part of the editing job. So that sort of works. But you know, for you, in your position in the industry, has ChatGPT changed your mind at all about, you know, the way you're perceiving these models and how they might be used? Or is it is it just kind of a next step along in the process of what you'd expect to see before these can become tools that we use?
 
-**Detlef Nauck**
+**Detlef Nauck**  
 Yeah, it's the next step in the evolution of these models. They're still too big and too expensive to run, right. So now, it is not quite clear how much it costs OpenAI to run the service that they're currently running. So you see estimates around millions of dollars per day that they have to spend on running the compute infrastructure to serve all of these questions. And this is not quite clear, the only official piece of information that I've seen is in a tweet, where the CEO said, a single question costs in the order of single digit cents, but we have no idea how many questions they serve per day, and therefore how much money they are spending. If you want to run a contact centre, or something like this, it all depends on how much compute need to stand up to be able to respond to hundreds or thousands of questions in parallel. And then obviously, if you can't trust that the answer is correct, it is of no use. So for making use in the service industry for contact centre or similar, what you need is a much smaller model that is restricted in terms of what it can say, it should have knowledge representation, so it gives correct answers. And it doesn't need to speak 48 languages and be able to produce programming code, it only needs to be able to talk about a singular domain, where it kind of the information, the knowledge about the domain has been carefully curated and prepared. And that's what we're not seeing yet. Can we build something like this, much smaller, much more restricted, and kind of provably correct, so we can actually use the output?
 
-**Brian Tarran**
+**Brian Tarran**  
 Yeah. Can we go back just to the point you mentioned earlier about, you know, the, the potential of like linking these sorts of chatbots up with search engines, you know, like Google? There's been some conversations and reporting around, you know, what breakthroughs or not Google might have made in this regard. I mean, have you got any perspective on that area of work and how far along that is maybe and what the challenges are to get to that point?
 
-**Detlef Nauck** 
+**Detlef Nauck**   
 Well, Google has its own large language model, LaMDA. And we have seen an announcement that Microsoft wants to integrate ChatGPT into Bing, their search engine. And, but as I said before, what's missing is the link to original sources. So you, coming up with a response is nice. But you need to be able to back it up, you need to say, Okay, this is my response, and I'm confident that this is correct, because here are some references. If I compare my response to these references, then they essentially mean the same thing. This is kind of what you need to be able to do. And we haven't seen this step yet. But I'm certain that the search engine providers are hard at work at doing this because that's essentially what they want. If you do a search in Google, in some instances, you'll see a side panel where you get detailed information. Let's say you ask about what's the capital of Canada, you get a response, you get the information in more detail, you get links to Wikipedia, where they retrieve content from and present this as the response. And this is done through knowledge graphs. And so if these kinds of knowledge graphs grow together with these kind of large language models, then we will see new types of search engines.
 
-**Brian Tarran**
+**Brian Tarran**  
 Okay. I guess final, my final question for you, Detlef, and there might be other angles that you want to explore. But it's like, are there questions that, you know, if you if you could sit down with OpenAI to talk about ChatGPT and what they've done, and what they plan to do next with it, what are the kinds of things that are bubbling away at the top of your mind?
 
-**Detlef Nauck** 
+**Detlef Nauck**  
 Well, one thing is controlling the use of these models, right? If you let them loose on the public, with an open API that anybody can use, you will see a proliferation of applications on top of it. If you go on YouTube, and you Google ChatGPT and health, you'll already find discussions where GPs discuss, Oh, that is the next step of automated doctors that we can use. So they believe that the responses from these systems can be used for genuine medical advice. And that's clearly a step too far. So we are seeing communities who don't necessarily have the technical background to judge the capabilities of these models, but see the opportunities for their own domain and might be acting too fast in adopting them. So the producer of these models has a certain responsibility to make sure that this doesn't happen. And I don't know how they want to control this. And, so my question at the developers of these models would be how do you handle sustainability, because the trend goes to ever bigger models. So there's, in some parts of the industry, there's the belief, if you make them big enough you get artificial general intelligence, which I don't believe is possible with these models. But this is definitely a trend that pushes the size of the models. The kind of, the idea of having just one model that can speak all the languages, can produce questions, answers, programming code, is obviously appealing. So you don't want to build many models. Ideally, you have only one. But how is that supposed to work? And how do you embed actual word knowledge and word models into these systems so that you can verify what comes out?
 
-**Brian Tarran**
+**Brian Tarran**  
 Yeah. I mean, the ethical dimension that you mentioned in the first part of your response is an important one, I think, in the sense that-- but I guess maybe almost redundant in the sense that it's already out there; you can't put ChatGPT back in the box, can we, essentially?
 
-**Detlef Nauck**  
+**Detlef Nauck**    
 Well, it's expensive to run so charging enough for access will put a lid on some frivolous use cases, but still, it needs to be controlled better. And you can make a jump to an AI regulation. So far, we only thought about regulating automated decision making, or automated classification. We also have to think about the automatic creation of digital content or automatic creation of software, which is possible through these models or the other generative AI models like diffusers. So how do we handle the creation of artificial content that looks like real content?
 
-**Brian Tarran** 
+**Brian Tarran**   
 Yeah. And there's also I think, something I picked up yesterday, there was reports of a case being filed by, I think, Getty Images against the creators of one of these generative art models because they're saying, you know, that you've used our data or you've used our image repositories essentially to train this model and it is now producing, you know, it's producing its own outputs that's based on this, and I guess there's an argument of it being a copyright infringement case. And I think that'll be quite interesting to watch to see how that does change the conversation around - yeah - fair use of that data that is available. You can find these images publicly, but you have to pay to use them for purposes other than just browsing, I guess. Yeah, it'll be interesting to watch.
 
 :::{.callout-tip}
