--- a/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
+++ b/news-and-views/editors-blog/posts/2023/01/27/talking-chatgpt.qmd
@@ -14,7 +14,7 @@ image-alt: Photo of Detlef Nauck
 ---
 ChatGPT is, right now, the world's most popular - and controversial - chatbot. Users have been both wowed by its capabilities[^1] and concerned by the confident-sounding nonsense it can produce. 
 
-But perhaps what impresses most is the way it is able to sustain a conversation. [When I interviewed our editorial board member Detlef Nauck about large langauge models (LLMs)](/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.html), back in November, he said:
+But perhaps what impresses most is the way it is able to sustain a conversation. [When I interviewed our editorial board member Detlef Nauck about large language models (LLMs)](/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.html), back in November, he said:
 
 > ... if you use these systems for dialogues, then you have to script the dialogue. They don’t sustain a dialogue by themselves. You create a dialogue tree, and what they do is they parse the text that comes from the user and then generate a response to it. And the response is then guided by the dialogue tree. But this is quite brittle; it can break. If you run out of dialogue tree, you need to pass the conversation over to a person. Systems like Siri and Alexa are like that, right? They break very quickly. So, you want these systems to be able to sustain conversations based on the correct context.
 
@@ -24,7 +24,7 @@ There are still major challenges to overcome, says Nauck - not least the fact th
 
 Check out the full conversation below or on [YouTube](https://www.youtube.com/watch?v=AWxfSmcgPbo).  
 
-Detlef Nauck is a member of the [Real World Data Science editoral board](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd) and head of AI and data science research for BT's Applied Research Division.
+Detlef Nauck is a member of the [Real World Data Science editorial board](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd) and head of AI and data science research for BT's Applied Research Division.
 
 {{< video https://www.youtube.com/embed/AWxfSmcgPbo >}}
 
@@ -60,7 +60,7 @@ This transcript has been produced using [speech-to-text transcription software](
 We're following up today Detlef on the, I guess, one of the biggest stories in artificial intelligence and data science at the moment, ChatGPT, the chat bot that's driven by a large language model and is proving endless amounts of-- providing endless amounts of either entertainment or concern, depending on what you ask it, and what outputs you get. So, but you've been looking at it in some detail, right, ChatGPT. And that's why I thought we would follow up and have a conversation to see, get your view on it, get your take on it. What's going on?
 
 **Detlef Nauck**  
-Yeah. So, what they have done is, OpenAI have used their large language model GPT-3 and they have trained an instance to basically answer questions and have conversations, where the model remembers what has been said in the conversation. And they have done this by using curated data of question and answers, where they basically have posed a question and said, This is what the answer should be. They trained the system on doing this, then, in the next step, they began use questions, potentially different ones, the system came up with a variety of answers, and then again, human curators would mark which is the best answer. And they would use this data to train what's called a reward model - so, a separate deep network that learns what kind of answer for a particular question is a good one - and then they would use this reward model to do additional reinforcement learning on the ChatGPT that they had built so far, basically using dialogues and the reward model would then either reward or penalise the the response that comes out of the system. And by doing that they have achieved quite remarkable capabilities in terms of sustaining conversations, and producing kind of very realistic sounding kind of responses. Sounds all very convincing. The model presents its responses quite confidently. But sometimes it makes silly mistakes. Sometimes the mistakes are not that obvious. It can hallucinate content. So let's say you ask it to write you scientific text about whatever topic and put some references in and these references are typically completely fabricated and not real. And it still doesn't know what it's talking about. It has no knowledge representation, doesn't have a word model. And it's just a statistical language model. So it's what we would call a sequence to sequence model. It uses an input sequence, which are words, and then guesses what's the next most likely word in the sequence. And then it continues building these sequences.
+Yeah. So, what they have done is, OpenAI have used their large language model GPT-3 and they have trained an instance to basically answer questions and have conversations, where the model remembers what has been said in the conversation. And they have done this by using curated data of question and answers, where they basically have posed a question and said, This is what the answer should be. They trained the system on doing this, then, in the next step, they began use questions, potentially different ones, the system came up with a variety of answers, and then again, human curators would mark which is the best answer. And they would use this data to train what's called a reward model - so, a separate deep network that learns what kind of answer for a particular question is a good one - and then they would use this reward model to do additional reinforcement learning on the ChatGPT that they had built so far, basically using dialogues and the reward model would then either reward or penalise the response that comes out of the system. And by doing that they have achieved quite remarkable capabilities in terms of sustaining conversations, and producing kind of very realistic sounding kind of responses. Sounds all very convincing. The model presents its responses quite confidently. But sometimes it makes silly mistakes. Sometimes the mistakes are not that obvious. It can hallucinate content. So let's say you ask it to write you scientific text about whatever topic and put some references in and these references are typically completely fabricated and not real. And it still doesn't know what it's talking about. It has no knowledge representation, doesn't have a word model. And it's just a statistical language model. So it's what we would call a sequence to sequence model. It uses an input sequence, which are words, and then guesses what's the next most likely word in the sequence. And then it continues building these sequences.
 
 **Brian Tarran**  
 Yeah. But, do you think the big advance as you see it is the way it's able to remember or store some knowledge, if you like, of the conversation, because that was something that came out of our first conversation that we had, where you were saying that, you know, if you're looking at these as a potential chatbots for customer service lines, or whatever it might be, actually, the trees, the conversation trees break down after a while, and they don't, you know, these models get lost, but actually, they're able to maintain it a little longer, are they, or-- ?
@@ -72,10 +72,10 @@ Yeah, I have not yet seen an example where they lost track of the conversation t
 Yeah. The other thing that struck me with them was that the, if you're asking somebody a question - a human, you know, for instance - you expect a response that and you would hope you will be able to trust that response, especially if it's someone in an expert position or someone you're calling, you know, on behalf of a company or something. The fact that - and I asked this question of ChatGPT itself - and the response was, again, you should consult external sources to verify the information that's been provided by the chatbot. So it's like, I guess that leaves a question as to what the utility of it is, if you if you're always having to go elsewhere to verify that information.
 
 **Detlef Nauck**  
-Yeah, I mean, that's the main problem with these models, because they don't have a knowledge representation. They don't have a word model, they can't fall back on facts that are represented as being true and present those. They come up with an answer. But I mean, there's has been a lot of kind of pre-prompting going in to ChatGPT. So when you start writing something, the session has already already been prompted with a lot of text, telling the model how to behave, what not to say, to avoid certain topics. There are additional moderation APIs running that make sure that you can't create certain type of responses, which are based on classical text filtering, and topic filtering. So they try to kind of restrict what the model can do to make sure it's not offensive or inappropriate. But that is limited. So through crafting your requests, intelligently, you can convince it to ignore all of these things and go past it in some instances. So the, it's not yet perfect, and certainly it's not authoritative. So you can't trust the information if you're not an expert yourself. So at the moment, I'd say these kind of models are really useful for experts who can judge the correctness of the answer. And then what you get this kind of maybe a helpful kind of text representation of something that you would have to write yourself otherwise. 
+Yeah, I mean, that's the main problem with these models, because they don't have a knowledge representation. They don't have a word model, they can't fall back on facts that are represented as being true and present those. They come up with an answer. But I mean, there has been a lot of kind of pre-prompting going in to ChatGPT. So when you start writing something, the session has already been prompted with a lot of text, telling the model how to behave, what not to say, to avoid certain topics. There are additional moderation APIs running that make sure that you can't create certain type of responses, which are based on classical text filtering, and topic filtering. So they try to kind of restrict what the model can do to make sure it's not offensive or inappropriate. But that is limited. So through crafting your requests, intelligently, you can convince it to ignore all of these things and go past it in some instances. So the, it's not yet perfect, and certainly it's not authoritative. So you can't trust the information if you're not an expert yourself. So at the moment, I'd say these kind of models are really useful for experts who can judge the correctness of the answer. And then what you get this kind of maybe a helpful kind of text representation of something that you would have to write yourself otherwise. 
 
 **Brian Tarran**  
-Yeah, and certainly conversations I've had with people, those who kind of work, maybe in creative industries, are finding them quite intriguing, in terms of things like, you know, maybe trying to come up with some clever tweets or something for a particular purpose, or something I want to try out is getting getting ChatGPT to write headlines for me, because it's always my least favourite part of the editing job. So that sort of works. But you know, for you, in your position in the industry, has ChatGPT changed your mind at all about, you know, the way you're perceiving these models and how they might be used? Or is it is it just kind of a next step along in the process of what you'd expect to see before these can become tools that we use?
+Yeah, and certainly conversations I've had with people, those who kind of work, maybe in creative industries, are finding them quite intriguing, in terms of things like, you know, maybe trying to come up with some clever tweets or something for a particular purpose, or something I want to try out is getting ChatGPT to write headlines for me, because it's always my least favourite part of the editing job. So that sort of works. But you know, for you, in your position in the industry, has ChatGPT changed your mind at all about, you know, the way you're perceiving these models and how they might be used? Or is it is it just kind of a next step along in the process of what you'd expect to see before these can become tools that we use?
 
 **Detlef Nauck**  
 Yeah, it's the next step in the evolution of these models. They're still too big and too expensive to run, right. So now, it is not quite clear how much it costs OpenAI to run the service that they're currently running. So you see estimates around millions of dollars per day that they have to spend on running the compute infrastructure to serve all of these questions. And this is not quite clear, the only official piece of information that I've seen is in a tweet, where the CEO said, a single question costs in the order of single digit cents, but we have no idea how many questions they serve per day, and therefore how much money they are spending. If you want to run a contact centre, or something like this, it all depends on how much compute need to stand up to be able to respond to hundreds or thousands of questions in parallel. And then obviously, if you can't trust that the answer is correct, it is of no use. So for making use in the service industry for contact centre or similar, what you need is a much smaller model that is restricted in terms of what it can say, it should have knowledge representation, so it gives correct answers. And it doesn't need to speak 48 languages and be able to produce programming code, it only needs to be able to talk about a singular domain, where it kind of the information, the knowledge about the domain has been carefully curated and prepared. And that's what we're not seeing yet. Can we build something like this, much smaller, much more restricted, and kind of provably correct, so we can actually use the output?
