--- a/news-and-views/interviews/posts/01/25/erica-thompson.qmd
+++ b/news-and-views/interviews/posts/01/25/erica-thompson.qmd
@@ -140,5 +140,7 @@ Excellent, excellent. Well, I wish you the best of luck with the book. As I say,
 **Erica Thompson**  
 Thank you very much. Thanks for having me.
 
+###### **&larr; Back to [Interviews](/news-and-views/interviews/index.qmd)**
+
 ---
 <p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
