links and photos added

--- a/news-and-views/interviews/posts/02/03/heidi-seibold.qmd
+++ b/news-and-views/interviews/posts/02/03/heidi-seibold.qmd
@@ -11,7 +11,7 @@ toc: true
 image: images/Heidi-Seibold.png 
 image-alt: Photo of Heidi Seibold 
 --- 
-Years are often dedicated to different causes and aims by different organisations. The United Nations, for example, has designated 2023 the [International Year of Dialogue as a Guarantee of Peace](https://documents-dds-ny.un.org/doc/UNDOC/GEN/N22/729/47/PDF/N2272947.pdf?OpenElement), while for the European Commission it is the [European Year of Skills](https://ec.europa.eu/commission/presscorner/detail/en/ip_22_6086). But over at the White House Office of Science and Technology Policy, 2023 has been declared the [Year of Open Science](https://www.whitehouse.gov/ostp/news-updates/2023/01/11/fact-sheet-biden-harris-administration-announces-new-actions-to-advance-open-and-equitable-research/). 
+Years are often dedicated to different causes and aims by different organisations. The United Nations, for example, has designated 2023 the [International Year of Dialogue as a Guarantee of Peace](https://www.undocs.org/en/A/RES/77/32), while for the European Commission it is the [European Year of Skills](https://ec.europa.eu/commission/presscorner/detail/en/ip_22_6086). But over at the White House Office of Science and Technology Policy, 2023 has been declared the [Year of Open Science](https://www.whitehouse.gov/ostp/news-updates/2023/01/11/fact-sheet-biden-harris-administration-announces-new-actions-to-advance-open-and-equitable-research/). 
 
 To discuss what this means for science generally and data science in particular, Real World Data Science invited [Heidi Seibold](https://heidiseibold.com/) for an interview. Seibold is a statistician and data scientist, and also an open science trainer and consultant, and we talked about how she become involved in open science, what it means to her, the benefits of it, and how academic and industry researchers can move towards it. 
 
@@ -20,25 +20,25 @@ Check out our full conversation below or on [YouTube](https://youtu.be/GD2g7cJ_y
 {{< video https://www.youtube.com/embed/GD2g7cJ_yE4 >}}
 
 ## Timestamps 
-* How did Heidi become interested in open science? (1:46) 
-* What does open data science mean to Heidi? (7:50) 
-* Working with PhD students on open science (12:00) 
-* How do open data science principles fit into an industry environment? (14:10) 
-* Knowledge transfer and public science (17:29) 
-* Year of Open Science initiatives and lasting impacts (21:08) 
+* How did Heidi become interested in open science? ([1:46](https://youtu.be/GD2g7cJ_yE4?t=106)) 
+* What does open data science mean to Heidi? ([7:50](https://youtu.be/GD2g7cJ_yE4?t=470)) 
+* Working with PhD students on open science ([12:00](https://youtu.be/GD2g7cJ_yE4?t=720)) 
+* How do open data science principles fit into an industry environment? ([14:10](https://youtu.be/GD2g7cJ_yE4?t=850)) 
+* Knowledge transfer and public science ([17:29](https://youtu.be/GD2g7cJ_yE4?t=1049)) 
+* Year of Open Science initiatives and lasting impacts ([21:08](https://youtu.be/GD2g7cJ_yE4?t=1268)) 
 
 ## Quotes 
-“Reproducibility [is] just like this minimum standard in research quality, where we say, ‘When we have the same data and the same analysis, we also want to see the same results’, and being able to check that from others is really, really important.” (2:45) 
+“Reproducibility [is] just like this minimum standard in research quality, where we say, ‘When we have the same data and the same analysis, we also want to see the same results’, and being able to check that from others is really, really important.” ([2:45](https://youtu.be/GD2g7cJ_yE4?t=165)) 
 
-“On the back of my wall here in my office I have written, ‘Open science is just good science in a digital era’… Before, we only had the printing press, and we had to print journals in order to distribute the knowledge that we have.” (5:23) 
+“On the back of my wall here in my office I have written, ‘Open science is just good science in a digital era’… Before, we only had the printing press, and we had to print journals in order to distribute the knowledge that we have.” ([5:23](https://youtu.be/GD2g7cJ_yE4?t=323)) 
 
-“For me, open data science entails the part of the scientific process that focuses on everything that happens on the computer: the data processing and the data analysis, and then getting from the data analysis - getting the results and the knowledge, really - in sort of a pipeline where you go from one step to the next. And so the image that I have in my head, when I think about open data science, is of a pipeline.” (10:16) 
+“For me, open data science entails the part of the scientific process that focuses on everything that happens on the computer: the data processing and the data analysis, and then getting from the data analysis -- getting the results and the knowledge, really -- in sort of a pipeline where you go from one step to the next. And so the image that I have in my head, when I think about open data science, is of a pipeline.” ([10:16](https://youtu.be/GD2g7cJ_yE4?t=616)) 
 
-“Nobody's perfect from the beginning. And open science and reproducible research is really hard, and it requires a lot of technical knowledge. And I always feel like people are so scared, because on one hand, they don't know how to do it yet, and the goal is so far away. And so I always like [to say], you don't have to be perfect right away; going one step into the right direction is super important.” (12:34) 
+“Nobody's perfect from the beginning. And open science and reproducible research is really hard, and it requires a lot of technical knowledge. And I always feel like people are so scared, because on one hand, they don't know how to do it yet, and the goal is so far away. And so I always like [to say], you don't have to be perfect right away; going one step into the right direction is super important.” ([12:34](https://youtu.be/GD2g7cJ_yE4?t=754)) 
 
-“If we think of companies, for example, like Microsoft - they put a lot of money right now into open source: they bought GitHub, they publish open source software, they put money into open source software projects like R, for example. So, somehow, this must be a good way of making profits.” (15:09) 
+“If we think of companies, for example, like Microsoft -- they put a lot of money right now into open source: they bought GitHub, they publish open source software, they put money into open source software projects like R, for example. So, somehow, this must be a good way of making profits.” ([15:09](https://youtu.be/GD2g7cJ_yE4?t=909)) 
 
-“[Open science for the public has value because] we don't know what ideas people will have. There's so many skilled people out there that probably will do amazing things… We have this with the software Stable Diffusion right now. That's an AI that generates images from text, and it runs on my computer here. And I don't need AI skills to be able to do that. And people are building such incredible images out of this, and it's really fun to see.” (18:50) 
+“[Open science for the public has value because] we don't know what ideas people will have. There's so many skilled people out there that probably will do amazing things… We have this with the software Stable Diffusion right now. That's an AI that generates images from text, and it runs on my computer here. And I don't need AI skills to be able to do that. And people are building such incredible images out of this, and it's really fun to see.” ([18:50](https://youtu.be/GD2g7cJ_yE4?t=1130))
 
 ## Transcript 
 :::{.callout-warning appearance="simple"} 
@@ -79,7 +79,7 @@ Yeah. So that's a really, really good and deep question. So on the back of my wa
 Of course, and you mentioned, obviously, journal publications, but I wonder to what extent is it that the scale of science has almost kind of outgrown the ability to kind of condense it all down into a, even if it's a 20 or 30 page, academic paper, right? Because it's not just about, you know, setting out the research question describing the methods, you know, presenting a table of the data, all that stuff can't be published now, or it can be, but it can't be fit within the framework of an academic paper, it has to be on a GitHub repository or in a Jupyter notebook or something like that. So kind of open science encourages us to, to think about distributing that knowledge in different ways. 
 
 **Heidi Seibold**  
-I think that's completely true. So, research now is so much more complex than it used to be right. There used to be single researchers who did like, yeah, such breakthroughs within one paper. And now, we already have so much knowledge, and the questions are so much more detailed and complicated. And also the data is so much more and the things that we can do is so much more complex. And so I feel like one paper doesn't-- isn't enough to describe the research that we're doing. And we did this one project with, with a group of students, actually, where we took 11 papers that were related to the topic that we were teaching about. And we took these 11 papers and data was available for the papers. And so we thought, well, we try to reproduce the results that they have there. And we found that it is really hard if we don't have the code, because the method section in papers is really super short, right? It's a super short section, if it's not like a statistics paper. And it's impossible to describe all the intricate steps that you took from the data to the complex model and analysis that you did. It's just not enough space within the paper. And the code is the perfect description of what you did, right? So why not publish it with it, and especially in cases where data privacy is not an issue, then, and you already publish the data, then it just makes so much sense to also publish the code, because the code is not like there's no privacy issues to that - usually at least. 
+I think that's completely true. So, research now is so much more complex than it used to be right. There used to be single researchers who did like, yeah, such breakthroughs within one paper. And now, we already have so much knowledge, and the questions are so much more detailed and complicated. And also the data is so much more and the things that we can do is so much more complex. And so I feel like one paper doesn't-- isn't enough to describe the research that we're doing. And we did this one project with, with a group of students, actually, where we took 11 papers that were related to the topic that we were teaching about. And we took these 11 papers and data was available for the papers. And so we thought, well, we try to reproduce the results that they have there. And we found that it is really hard if we don't have the code, because the method section in papers is really super short, right? It's a super short section, if it's not like a statistics paper. And it's impossible to describe all the intricate steps that you took from the data to the complex model and analysis that you did. It's just not enough space within the paper. And the code is the perfect description of what you did, right? So why not publish it with it, and especially in cases where data privacy is not an issue, then, and you already publish the data, then it just makes so much sense to also publish the code, because the code is not like there's no privacy issues to that -- usually at least. 
 
 **Brian Tarran**   
 So is there a kind of you know-- when we say open data science, you know, what does that look like? And do you have a kind of example or simplified example of what that would look like, right? And how it's more than just, you know, the finished paper, the product of the science scientific process? 
@@ -121,7 +121,7 @@ Yeah, there is. I think, especially what I really liked was that, yeah, federall
 Last question for you, then Heidi, you know, what would you want the lasting impact of an initiative like this to be? And you know, would you like to see this sort of thing replicated in other countries around the world? If indeed, you know, other countries may already be doing this and have already done this?  
 
 **Heidi Seibold**  
-I think in general, it's a very, very good sign that we're seeing right now. We've seen lots of movement, for example, in the Netherlands - Netherlands is really big on open science - and seeing such a big country [the US] that also plays such an important role in the world, doing-- taking this step, is a great sign for the entire, like all of research, really. And yeah, I think it's also nice to see that we're going from like, Oh, this is a niche topic that only experts are interested in, and people that are like advocates and nerds focus on, to something that really governments are thinking about. 
+I think in general, it's a very, very good sign that we're seeing right now. We've seen lots of movement, for example, in the Netherlands -- Netherlands is really big on open science -- and seeing such a big country [the US] that also plays such an important role in the world, doing-- taking this step, is a great sign for the entire, like all of research, really. And yeah, I think it's also nice to see that we're going from like, Oh, this is a niche topic that only experts are interested in, and people that are like advocates and nerds focus on, to something that really governments are thinking about. 
 
 **Brian Tarran**   
 So, open science is going mainstream, I think is the message. And let's hope that it continues to do so. So Heidi, thank you very much for your time today. Where can people find you online, if f they want to find out more about you and your work and your thoughts on open science? 
