--- a/news-and-views/interviews/posts/02/03/heidi-seibold.qmd
+++ b/news-and-views/interviews/posts/02/03/heidi-seibold.qmd
@@ -13,7 +13,7 @@ image-alt: Photo of Heidi Seibold
 --- 
 Years are often dedicated to different causes and aims by different organisations. The United Nations, for example, has designated 2023 the [International Year of Dialogue as a Guarantee of Peace](https://www.undocs.org/en/A/RES/77/32), while for the European Commission it is the [European Year of Skills](https://ec.europa.eu/commission/presscorner/detail/en/ip_22_6086). But over at the White House Office of Science and Technology Policy, 2023 has been declared the [Year of Open Science](https://www.whitehouse.gov/ostp/news-updates/2023/01/11/fact-sheet-biden-harris-administration-announces-new-actions-to-advance-open-and-equitable-research/). 
 
-To discuss what this means for science generally and data science in particular, Real World Data Science invited [Heidi Seibold](https://heidiseibold.com/) for an interview. Seibold is a statistician and data scientist, and also an open science trainer and consultant, and we talked about how she become involved in open science, what it means to her, the benefits of it, and how academic and industry researchers can move towards it. 
+To discuss what this means for science generally and data science in particular, Real World Data Science invited [Heidi Seibold](https://heidiseibold.com/) for an interview. Seibold is a statistician and data scientist, and also an open science trainer and consultant, and we talked about how she became involved in open science, what it means to her, the benefits of it, and how academic and industry researchers can move towards it. 
 
 Check out our full conversation below or on [YouTube](https://youtu.be/GD2g7cJ_yE4).
 
