--- a/index.qmd
+++ b/index.qmd
@@ -15,6 +15,7 @@ listing:
     filter-ui: false
     max-items: 3
     feed: false
+toc: false
 ---
 
 Welcome to the home of **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/). This site and its content are being created and curated by data science practitioners and leaders with a single goal in mind: to help you deliver high quality, ethical, impactful data science in your workplace.
