--- a/index.qmd
+++ b/index.qmd
@@ -72,29 +72,49 @@ READ MORE
 
 :::
 
-::: {.article-block}
+::: {.top-grid-text}
+::: {.top-grid-block}
 
 ::: grid
 ::: {.g-col-12 .g-col-md-4 .alt-background}
-##### Category
+###### Category
 
 ## Headlines are likely to be longer than a couple of words
 Main body copy goes here Main body copy goes here Main body copy goes here Main body copy goes here.
 :::
 
-::: {.g-col-12 .g-col-md-8}
-![](header-image.png)
+::: {.g-col-12 .g-col-md-8 .alt-background}
+![](story-image-1.png)
+:::
+:::
+
+:::
+:::
+
+::: {.bottom-grid-text}
+::: {.bottom-grid-block}
+
+::: grid
+::: {.g-col-12 .g-col-md-6}
+![](story-image-2.png)
+
+###### Category
+
+## Headlines are likely to be longer than a couple of words
+Main body copy goes here Main body copy goes here Main body copy goes here Main body copy goes here.
 :::
 
 ::: {.g-col-12 .g-col-md-6}
-Hello
+![](story-image-2.png)
+
+###### Category
+
+## Headlines are likely to be longer than a couple of words
+Main body copy goes here Main body copy goes here Main body copy goes here Main body copy goes here.
+:::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-Hello
 :::
-:::
-
 :::
 
 ::: {.bannerad-text}
