--- a/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
+++ b/news-and-views/datasciencebites/posts/2023/03/02/basket-complementarity.qmd
@@ -29,14 +29,16 @@ A large amount of cross-selling, whether attempted in store by a sales assistant
 
 Inspired by complementarity-based ideas prevalent in microeconomics, Puka and Jedrusik begin by collecting some established ideas from traditional market basket analysis, the key one being “confidence”. In this case, we’re talking about the confidence that item A leads (in a way) to item B (which we can express in notation as *conf*({A} → {B})). Take a look at Table 1 (below), which presents a numbered list of 18 shopping trips, with details of what was purchased on each trip. Notice how two of the trips (1 and 3) resulted in sales of both milk (B) and cornflakes (A), while five trips (1, 3, 7, 17, and 18) had cornflakes. Under the assumption that someone already has cornflakes in their trolley, the probability that they will buy milk is 2/5 = 0.4. So, *conf*({cornflakes} → {milk}) = 0.4. The closer this number gets to one, the more automatic the cornflakes--milk connection becomes. This number can therefore be used to recommend an item that is related in some way to another already bought.
 
-![](images/tab-1-fig-1.jpg)
+:::{.column-body-outset}
+[![](images/tab1-fig1.png)](images/tab1-fig1.png)
+:::
 
 ::: grid
 ::: {.g-col-12 .g-col-md-4}
 **Table 1:** A list (with each row representing a trip to a grocery store) that can be seen in one of two ways: (a) a record of what 18 different people bought, or (b) a history of one person’s purchases over 18 trips. The list is similar to the one examined by Puka and Jedrusik, except for the last three rows. These trips, under interpretation (b) may help us develop an understanding of a single shopper’s preferences. 
 :::
 ::: {.g-col-12 .g-col-md-8}
-**Figure 1:** The horizontal axis reports the probability that someone will buy item B under the assumption that A is already in their shopping trolley (i.e., *conf*({A} → {B})). The vertical axis reports the opposite: the chance that someone will go for A given that B is already in the cart (i.e., *conf*({B} → {A})). For any pair of items, these two probabilities can be found and, when plotted in 2D, a pair of items generates a single point. The more similar the two probabilities are for each pair, the closer the point comes to the line of equality (the red dashed line that runs diagonally through the origin), and the more complementary the items become. It's rare that a dot will land exactly on the line of equality, so the green and orange lines parallel to the red line mark how far off a dot is from this ideal setting, using different levels of tolerance. From this we may say, for example, that cornflakes and milk are more complementary to each other than bread rolls and butter, as the first pairing lies closer to the line of equality.
+**Figure 1:** Basket complementarity under varying tolerance. The horizontal axis reports the probability that someone will buy item B under the assumption that A is already in their shopping trolley (i.e., *conf*({A} → {B})). The vertical axis reports the opposite: the chance that someone will go for A given that B is already in the cart (i.e., *conf*({B} → {A})). For any pair of items, these two probabilities can be found and, when plotted in 2D, a pair of items generates a single point. The more similar the two probabilities are for each pair, the closer the point comes to the line of equality (the red dashed line that runs diagonally through the origin), and the more complementary the items become. It's rare that a dot will land exactly on the line of equality, so the green and orange lines parallel to the red line mark how far off a dot is from this ideal setting, using different levels of tolerance. From this we may say, for example, that cornflakes and milk are more complementary to each other than bread rolls and butter, as the first pairing lies closer to the line of equality.
 :::
 :::
 
